# token_saver

./: .env.example  .gitignore  Dockerfile  MiniMax.md  MiniMax_config.example.json  README.md  docker-compose.yml  pyproject.toml
ai-workflow/: README.md
ai-workflow/core/: backlog_update_skill_spec.md  code_index_update_skill_spec.md  doc_sync_skill_spec.md  existing_project_onboarding_contract.md  global_workflow_standard.md  merge_doc_reconcile_skill_spec.md  output_schema_guide.md  project_status_assessment.md  prototype_promotion_scope.md  read_only_mcp_transport_promotion.md  session_start_skill_spec.md  validation_plan_skill_spec.md  workflow_adoption_entrypoints.md  workflow_agent_topology.md  workflow_configuration_layers.md  workflow_global_injection_policy.md  workflow_harness_distribution.md  workflow_kit_roadmap.md  workflow_mcp_candidate_catalog.md  workflow_release_spec.md  workflow_skill_catalog.md
ai-workflow/examples/: README.md  bootstrap_output_samples.md  end_to_end_mcp_demo.md  end_to_end_skill_demo.md  pilot_adoption_open_git_client_example.md
ai-workflow/examples/output_samples/: README.md  backlog_update.acme_delivery_platform.json  backlog_update.error.missing_document.json  check_doc_links.examples.json  check_doc_metadata.examples.json  check_quickstart_stale_links.sample.json  code_index_update.error.missing_change_input.json  code_index_update.research_eval_hub.json  create_backlog_entry.sample.json  demo_workflow.acme_delivery_platform.json  demo_workflow.error.missing_document.json  doc_sync.acme_delivery_platform.json  doc_sync.error.missing_change_input.json  existing_project_onboarding.acme_delivery_platform.json  existing_project_onboarding.error.missing_document.json  existing_project_onboarding.with_assessment.sample.json  latest_backlog.acme_delivery_platform.json  merge_doc_reconcile.acme_delivery_platform.json  merge_doc_reconcile.error.missing_document.json  session_start.acme_delivery_platform.json  session_start.error.missing_document.json  suggest_impacted_docs.sample.json  validation_plan.acme_delivery_platform.json  validation_plan.docs_primary.acme_delivery_platform.json  validation_plan.error.missing_change_input.json
ai-workflow/global-snippets/: README.md
ai-workflow/harnesses/: README.md
ai-workflow/harnesses/_template/: README.md
ai-workflow/harnesses/codex/: apply_guide.md
ai-workflow/harnesses/opencode/: apply_guide.md
ai-workflow/mcp_servers/: README.md  prototype_layout.md  read_only_bundle.md
ai-workflow/memory/active/: state.json  (+3 more)
ai-workflow/schemas/: generated_output_schemas.json  output_sample_contracts.json
ai-workflow/scripts/: README.md  apply_harness_update.py  apply_workflow_upgrade.py  bootstrap_workflow_kit.py  export_harness_package.py  generate_workflow_state.py  run_demo_workflow.py  run_existing_project_onboarding.py  scaffold_harness.py
ai-workflow/skills/: README.md  prototype_layout.md
ai-workflow/templates/: daily_backlog_template.md  pilot_adoption_record_template.md  pilot_candidate_checklist.md  project_workflow_profile_template.md  release_note_template.md  session_handoff_template.md  work_backlog_template.md
ai-workflow/tests/: README.md  check_bootstrap.py  check_code_index_update.py  check_docs.py  check_existing_project_onboarding.py  check_quickstart_stale_links.py  check_validation_plan.py
ai-workflow/wiki/: .gitignore  SCHEMA.md  index.md  log.md
ai-workflow/workflow_kit/: README.md  __init__.py  bitbucket_v2.py  cache_analytics.py  cache_analytics_alerting.py  cache_analytics_diff.py  cache_analytics_trend.py  cache_analytics_trend_chart.py  cache_dashboard.py  cache_lfu_decay.py  cache_lfu_decay_persist.py  cache_migration.py  cache_size_compare.py  constants.py  gitignore.py  lfu_config.py  lfu_integration.py  okf_export.py  okf_import.py  path_resolver.py  phishing_federation.py  phishing_federation_v4.py  phishing_keywords.py  pyproject.toml  upgrade_diff.py  url_validity.py  v_r13_commit_diff.py  workflow_kit_cli.py
ai-workflow/workflow_kit/cli/: doctor.py
ai-workflow/workflow_kit/common/: __init__.py  atomic_write.py  auth.py  change_types.py  decorators.py  doc_sync.py  doc_transformer.py  docs.py  errors.py  exploration.py  exploration_scope.py  git.py  ingest.py  linter.py  markdown.py  metadata.py  milestones.py  normalize.py  output_contracts.py  patching.py  paths.py  planning.py  profiling.py  project_docs.py  purpose_context.py  read_only_bundle.py  reconcile.py  resiliency.py  rotation.py  runner.py  scaffold.py  session_outputs.py  testing.py  text.py  workflow_state.py  workflow_writes.py  writing_bundle.py
ai-workflow/workflow_kit/common/contracts/: base.py  baselines.py  errors.py  high_value.py  question_format.py  read_only.py  stage_gate.py  stage_gate_runtime.py
ai-workflow/workflow_kit/common/modes/: __init__.py  registry.py
ai-workflow/workflow_kit/common/schemas/: __init__.py  backlog.py  base.py  doc_sync.py  git.py  index.py  linter.py  orchestration.py  read_only.py  reconcile.py  session.py  validation.py  worker.py
ai-workflow/workflow_kit/common/state/: builder.py  cache.py
ai-workflow/workflow_kit/contract_v1/: __init__.py  delegator.py  output_validator.py
ai-workflow/workflow_kit/harness/: antigravity_helper.py  capability_matrix.py
ai-workflow/workflow_kit/server/: __init__.py  mcp_v1_server.py  read_only_entrypoint.py  read_only_jsonrpc.py  read_only_mcp_sdk.py  read_only_registry.py  read_only_tools.py
docs/: PROJECT_PROFILE.md  architecture.md
docs/concepts/: token-saver-concept.md
src/token_saver/: __init__.py  __version__.py  cli.py  config.py  models.py  py.typed
tests/: conftest.py  test_admin_health.py  test_auth.py  test_chat_completions.py  test_chat_completions_forwarding.py  test_crypto.py  test_import.py  test_in_memory_provider_store.py  test_model_cache.py  test_mongo_provider_store.py  test_mongo_user_store.py  test_provider_routes.py  test_provider_store_factory.py  test_seed_admin.py  test_session_store.py  test_user_store_factory.py  test_v1_models.py
tests/fixtures/: __init__.py
(+56 files in other folders)
