[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-saver"
version = "0.1.0a0"
description = "OpenAI-compatible HTTP proxy with policy-driven content type handling, pluggable compression, and CCR-lite caching."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "yklee", email = "ddn777@hotmail.com"},
]
keywords = [
    "llm",
    "proxy",
    "router",
    "token-saver",
    "openai-compatible",
    "compression",
    "ccr",
    "ai-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core runtime dependencies.
# Locked to >= floor versions; FastAPI/Pydantic/Redis/Motor are the long-lived
# pillars — pin majors loosely to avoid the standard_ai_workflow v0.9.x
# "no surprise upgrades" trap (anyio/pydantic ecosystem breaks often).
dependencies = [
    # HTTP layer
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "httpx>=0.27,<1.0",          # provider client + internal calls
    # Storage clients
    "redis>=5.0,<6.0",            # hot storage (sessions, rate limits, cache hints)
    "motor>=3.4,<4.0",            # async MongoDB driver (cold storage)
    "pymongo>=4.6,<5.0",          # pinned with motor
    # Schema / config
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    # Crypto / IDs (TASK-002-3 / TASK-002-5 forward refs)
    "cryptography>=42.0",          # AES-GCM for base_url + api_key encryption
    "argon2-cffi>=23.0",           # password hash (auth users collection)
    "python-ulid>=3.0",            # ULID generation for user_/provider_/conv_ IDs
    # CLI
    "click>=8.1,<9.0",
    # Logging
    "structlog>=24.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Development: smoke test runner + lint + type check.
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "respx>=0.21",                # httpx mocking for provider fixtures
    "mongomock-motor>=0.0.36",    # in-process MongoDB for MongoUserStore tests
    "fakeredis>=2.20",            # in-process Redis for RedisSessionStore + cache tests
    "ruff>=0.1",
    "mypy>=1.0",
]
# Optional local LLM runtime helpers (TASK-005+).
ollama = [
    # No additional deps — Ollama uses OpenAI-compat /v1/chat/completions.
]
vllm = [
    # No additional deps — vLLM uses OpenAI-compat /v1/chat/completions.
]

[project.urls]
Homepage = "https://github.com/ykylee/token_saver"
Repository = "https://github.com/ykylee/token_saver"
Issues = "https://github.com/ykylee/token_saver/issues"

# CLI entry point — `token-saver serve` / `provider test` / `provider add` ...
# Implemented in token_saver.cli:main. TASK-002-7 will flesh out the subcommands.
[project.scripts]
token-saver = "token_saver.cli:main"

[tool.setuptools]
# Single distribution, single package: src layout keeps the project root clean
# (no accidental `import token_saver` from cwd).
packages = [
    "token_saver",
    "token_saver.proxy",
    "token_saver.proxy.routes",
    "token_saver.auth",
    "token_saver.ratelimit",
    "token_saver.detector",
    "token_saver.compressor",
    "token_saver.provider",
    "token_saver.ccr",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
token_saver = ["py.typed"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", "*.pyc", "*.pyo"]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
# FastAPI's idiomatic `param: T = Depends(...)` triggers B008 ("function
# call in default value"). It's the framework's intended pattern — see
# https://fastapi.tiangolo.com/tutorial/dependencies/classes-as-dependencies/
# We disable the rule globally rather than peppering `noqa` everywhere.
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
# TASK-002-1: skeleton ships without strict mode — each sub-task (TASK-002-2..7)
# will tighten its own module via [tool.mypy.overrides] or base strict flip.
# This mirrors the standard_ai_workflow v0.8.0 phase 1 (public surface only).
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["build/.*", "dist/.*", ".venv/.*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
# Async fixtures used in TASK-002-2+; declared upfront so test_*.py can opt-in.
asyncio_mode = "auto"

# ---------------------------------------------------------------------------
# Local-only smoke: keep import path + minimal pytest green until TASK-002-7.
# ---------------------------------------------------------------------------

[tool.token_saver.runtime]
# Schema version drift tracker — bumped when Redis/Mongo schema changes.
schema_version = 1